--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com"><link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
 </head>
-<h1 style="top: 100px; left: 200px; position: absolute">DO YOU LOVE ME?</h1>
+<h1 style="top: 100px; left: 200px; position: absolute; color: hotpink; font-family: 'Varela Round', sans-serif;">Linh có dễ thương không?</h1>
 <body>
 <input type="button" style="position: absolute; top:170px;left:220px" onclick="yes()" value="YES">
 <input type="button" style="position: absolute; top:170px;left:280px" onmouseover="no()" value="NO" id="noH">
